--- a/index.html
+++ b/index.html
@@ -6,18 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lab 9</title>
 
-  <!-- ─────────────────────────────────────────────────────────────────────
-       OPTIONAL: If you sign up for TrackJS, you get a <script> snippet like this.
-       Replace the `YOUR_TOKEN_HERE` with the token TrackJS gives you,
-       and uncomment these two lines. Then TrackJS will automatically
-       capture client‐side errors for you. 
-  ───────────────────────────────────────────────────────────────────── -->
+  <!-- (TrackJS snippet would go here if you un-commented it) -->
   <!-- 
   <script>
     window.trackJSErrors = true;
-    window.trackJS = {
-      token: "YOUR_TOKEN_HERE"
-    };
+    window.trackJS = { token: "YOUR_TOKEN_HERE" };
   </script>
   <script src="https://cdn.trackjs.com/releases/current/tracker.js"></script>
   -->
@@ -95,9 +88,7 @@
     </section>
   </main>
 
-  <!-- ─────────────────────────────────────────────────────────────────────
-       POINT TO OUR NEW SCRIPT.JS
-  ───────────────────────────────────────────────────────────────────── -->
+  <!-- This is the ONLY script tag in the <body> -->
   <script src="script.js"></script>
 </body>
 </html>
