--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <title>Lab 9</title>
   <link rel="icon" href="./favicon.ico" />
 
+  <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+  <script>
+  window.TrackJS && TrackJS.install({ 
+    token: "d0f4cb16a9c44c16985764ac4f3e755e"
+    // for more configuration options, see https://docs.trackjs.com
+  });
+  </script>
   <!-- (TrackJS snippet would go here if you un-commented it) -->
   <!-- 
   <script>
