--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
   <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
   <script>
-  window.TrackJS && TrackJS.install({ 
-    token: "d0f4cb16a9c44c16985764ac4f3e755e"
-    // for more configuration options, see https://docs.trackjs.com
-  });
+    window.TrackJS && TrackJS.install({
+      token: "d0f4cb16a9c44c16985764ac4f3e755e",
+      application: "lab9_starter_errordemo"
+      // for more configuration options, see https://docs.trackjs.com
+    });
   </script>
   <!-- (TrackJS snippet would go here if you un-commented it) -->
   <!-- 
